error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
[ 75%] Building CXX object CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o
/home/haris/celestial-nav/src/location_determination.cpp:188:40: error: cannot declare member function ‘static std::vector<std::pair<Star, ReferenceStarData> > LocationDetermination::removeOutliers(const std::vector<std::pair<Star, ReferenceStarData> >&, const CameraParameters&, const Eigen::Vector2d&)’ to have static linkage [-fpermissive]
  188 |     const Eigen::Vector2d &initialGuess) {
      |                                        ^
/home/haris/celestial-nav/src/location_determination.cpp:234:8: error: redefinition of ‘static double LocationDetermination::calculateMedian(std::vector<double, std::allocator<double> >)’
  234 | double LocationDetermination::calculateMedian(std::vector<double> values) {
      |        ^~~~~~~~~~~~~~~~~~~~~
/home/haris/celestial-nav/src/location_determination.cpp:213:8: note: ‘static double LocationDetermination::calculateMedian(std::vector<double, std::allocator<double> >)’ previously defined here
  213 | double LocationDetermination::calculateMedian(std::vector<double> values) {
      |        ^~~~~~~~~~~~~~~~~~~~~
/home/haris/celestial-nav/src/location_determination.cpp:247:8: error: redefinition of ‘static double LocationDetermination::calculateMAD(const std::vector<double, std::allocator<double> >&, double)’
  247 | double LocationDetermination::calculateMAD(const std::vector<double>& values, double median) {
      |        ^~~~~~~~~~~~~~~~~~~~~
/home/haris/celestial-nav/src/location_determination.cpp:226:8: note: ‘static double LocationDetermination::calculateMAD(const std::vector<double, std::allocator<double> >&, double)’ previously defined here
  226 | double LocationDetermination::calculateMAD(const std::vector<double>& values, double median) {
      |        ^~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:146: CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 